--- a/syntax_sprint/templates/index.html
+++ b/syntax_sprint/templates/index.html
@@ -13,492 +13,65 @@
     <!-- Enlace al favicon -->
     <link rel="icon" type="image/x-icon" href="{% static 'favicon.ico' %}" />
 
-    <!-- Enlace al CSS de Bootstrap -->
-    <link
-      href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css"
-      rel="stylesheet"
-    />
+    <!-- Enlace a styles.css -->
+    <link href="{% static 'css/styles.css' %}" rel="stylesheet" />
 
-    <!-- Enlace a styles.css, asegurándote de que se carga después de Bootstrap -->
-    <link href="{% static 'styles.css' %}" rel="stylesheet" />
+    <!-- Enlace a jQuery antes de tu script.js -->
+    <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
 
-    <style>
-      :root {
-        --green: #00b755;
-        --yellow: #fdcb40;
-        --red: #ca4754;
-        --black: #222;
-        --gray: #999;
-      }
+    <!-- Enlace a script.js -->
+    <script src="{% static 'js/script.js' %}" defer></script>
 
-      body {
-        font-family: Menlo, monospace;
-        color: white;
-      }
-
-      section {
-        padding: 16px;
-        display: flex;
-        flex-direction: column;
-        gap: 4px;
-        max-width: 500px;
-        margin: 0 auto;
-      }
-
-      time {
-        color: var(--yellow);
-      }
-
-      input {
-        z-index: -999;
-        position: absolute;
-        top: 0;
-        left: 0;
-        pointer-events: none;
-        opacity: 0;
-      }
-
-      p {
-        display: flex;
-        flex-wrap: wrap;
-        gap: 3px 8px;
-        margin: 0;
-      }
-
-      letter {
-        color: var(--gray);
-        position: relative;
-      }
-
-      letter.active::before {
-        content: "|";
-        color: var(--yellow);
-        font-size: 14px;
-        position: absolute;
-        left: -65%;
-        animation: 1s blink infinite ease-in-out;
-      }
-
-      letter.active.is-last::before {
-        left: 65%;
-      }
-
-      letter.correct {
-        color: var(--green);
-      }
-
-      letter.incorrect {
-        color: var(--red);
-      }
-
-      word {
-        border-bottom: 1.5px solid transparent;
-        transition: border-color 0.3s ease-in-out;
-      }
-
-      word.marked {
-        border-color: var(--red);
-      }
-
-      #game {
-        display: flex;
-        flex-direction: column;
-        align-items: center;
-        justify-content: center;
-      }
-
-      #results {
-        display: none;
-        text-align: center;
-        margin-top: 20px;
-      }
-
-      h2 {
-        font-weight: 400;
-        opacity: 0.4;
-        margin: 0;
-        font-size: 16px;
-      }
-
-      h3 {
-        font-weight: 400;
-        margin: 0;
-        font-size: 24px;
-        color: var(--yellow);
-      }
-
-      button {
-        background: transparent;
-        border: 0;
-        margin-top: 32px;
-        padding: 8px;
-        opacity: 0.4;
-        display: inline-block;
-        transition: opacity 0.3s ease-in-out, transform 0.3s ease-in-out;
-        cursor: pointer;
-        border-radius: 16px;
-      }
-
-      button:hover {
-        background: #444;
-        opacity: 1;
-        scale: 110%;
-      }
-
-      .text-gradient {
-        font-size: 30px;
-        color: #222;
-      }
-    </style>
+    <script>
+      const apiUrl = "{% url 'get_python_function' %}";
+    </script>
   </head>
-  <body class="d-flex flex-column h-100">
-    <main class="flex-shrink-0">
-      <nav class="navbar navbar-expand-lg navbar-light bg-white py-3">
-        <div class="container px-5">
-          <a class="navbar-brand" href="{% url 'index' %}">
-            <span class="fw-bolder text-primary">SyntaxSprint</span>
-          </a>
-          <button
-            class="navbar-toggler"
-            type="button"
-            data-bs-toggle="collapse"
-            data-bs-target="#navbarSupportedContent"
-            aria-controls="navbarSupportedContent"
-            aria-expanded="false"
-            aria-label="Toggle navigation"
-          >
-            <span class="navbar-toggler-icon"></span>
-          </button>
-          <div class="collapse navbar-collapse" id="navbarSupportedContent">
-            <ul class="navbar-nav ms-auto mb-2 mb-lg-0 small fw-bolder">
-              <li class="nav-item">
-                <a class="nav-link" href="{% url 'index' %}">Inicio</a>
-              </li>
-              <li class="nav-item">
-                <a class="nav-link" href="{% url 'settings' %}">Ajustes</a>
-              </li>
-              {% if user.is_authenticated %}
-              <li class="nav-item">
-                <span class="nav-link">Hola, {{ user.username }}</span>
-              </li>
-              <li class="nav-item">
-                <a class="nav-link" href="{% url 'logout' %}">Cerrar sesión</a>
-              </li>
-              {% else %}
-              <li class="nav-item">
-                <a class="nav-link" href="{% url 'login' %}">Iniciar sesión</a>
-              </li>
-              <li class="nav-item">
-                <a class="nav-link" href="{% url 'signup' %}">Registrarse</a>
-              </li>
-              {% endif %}
-            </ul>
-          </div>
-        </div>
+  <body>
+    <main>
+      <nav>
+        <a class="navbar" href="{% url 'index' %}">
+          <span>SyntaxSprint</span>
+        </a>
+        <ul class="navbar-nav ms-auto mb-2 mb-lg-0 small fw-bolder">
+          <li class="nav-item">
+            <a class="nav-link" href="{% url 'index' %}">Inicio</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="{% url 'settings' %}">Ajustes</a>
+          </li>
+          {% if user.is_authenticated %}
+          <li class="nav-item">
+            <span class="nav-link">Hola, {{ user.username }}</span>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="{% url 'logout' %}">Cerrar sesión</a>
+          </li>
+          {% else %}
+          <li class="nav-item">
+            <a class="nav-link" href="{% url 'login' %}">Iniciar sesión</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="{% url 'signup' %}">Registrarse</a>
+          </li>
+          {% endif %}
+        </ul>
       </nav>
+      <div>
+        <span> ¿Qué tan rápido eres escribiendo código? </span>
+        <button id="start-test">Iniciar Test</button>
+      </div>
 
-      <header class="py-5">
-        <div class="container-fluid px-5 pb-5">
-          <div class="row gx-5 align-items-center h-100">
-            <div class="col-xxl-5 mx-auto">
-              <div id="header-content">
-                <div class="text-container">
-                  <span
-                    class="text-gradient row d-flex justify-content-center align-items-center h-400 text-black"
-                  >
-                    ¿Qué tan rápido eres escribiendo código?
-                  </span>
-                </div>
-
-                <div class="container mt-5">
-                  <div
-                    class="d-grid gap-3 d-sm-flex justify-content-sm-center mb-3"
-                  >
-                    <button
-                      id="start-test"
-                      class="btn btn-outline-dark btn-lg px-5 py-3 fs-6 fw-bolder"
-                    >
-                      Iniciar Test
-                    </button>
-                  </div>
-                </div>
-              </div>
-              <div id="test-area">
-                <!-- Aquí es donde se cargará la prueba -->
-              </div>
-            </div>
-          </div>
-        </div>
-      </header>
-
-      <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
-      <script>
-        $(document).ready(function () {
-          $("#start-test").click(function () {
-            const testHTML = `
-                  <main id="game">
-                      <section>
-                          <time>30</time>
-                          <p id="code-area"></p>
-                          <input autofocus>
-                      </section>
-                      <section id="results">
-                          <h2>WPM</h2>
-                          <h3 id="results-wpm"></h3>
-                          <h2>Precisión</h2>
-                          <h3 id="results-accuracy"></h3>
-                      </section>
-                  </main>
-              `;
-
-            // Inserta el HTML dinámico en el DOM
-            $("#test-area").html(testHTML).show();
-
-            // Asegúrate de que el CSS se aplique correctamente
-            // Verifica si ya se ha cargado styles.css, y si no, lo carga
-            if (!$("link[href$='css/styles.css']").length) {
-              $("<link/>", {
-                rel: "stylesheet",
-                type: "text/css",
-                href: "{% static 'css/styles.css' %}",
-              }).appendTo("head");
-            }
-
-            fetch("{% url 'get_python_function' %}")
-              .then((response) => response.json())
-              .then((data) => {
-                const code = data.code;
-                const codeArea = document.getElementById("code-area");
-
-                const words = code.split(/\s+/);
-                codeArea.innerHTML = words
-                  .map((word) => {
-                    return `<word>${word
-                      .split("")
-                      .map((letter) => `<letter>${letter}</letter>`)
-                      .join("")}</word>`;
-                  })
-                  .join(" ");
-
-                initGame();
-              });
-
-            function initGame() {
-              const $time = document.querySelector("time");
-              const $paragraph = document.querySelector("p");
-              const $input = document.querySelector("input");
-              const $results = document.querySelector("#results");
-              const $wpm = $results.querySelector("#results-wpm");
-              const $accuracy = $results.querySelector("#results-accuracy");
-
-              let playing = false;
-              let currentTime = 30;
-              let intervalId;
-              $time.textContent = currentTime;
-
-              const $firstWord = $paragraph.querySelector("word");
-              $firstWord.classList.add("active");
-              $firstWord.querySelector("letter").classList.add("active");
-
-              document.addEventListener("keydown", () => {
-                $input.focus();
-                if (!playing) {
-                  playing = true;
-                  intervalId = setInterval(() => {
-                    currentTime--;
-                    $time.textContent = currentTime;
-
-                    if (currentTime === 0) {
-                      clearInterval(intervalId);
-                      gameOver();
-                    }
-                  }, 1000);
-                }
-              });
-
-              $input.addEventListener("keydown", onKeyDown);
-              $input.addEventListener("keyup", onKeyUp);
-
-              function onKeyDown(event) {
-                const $currentWord = $paragraph.querySelector("word.active");
-                const $currentLetter =
-                  $currentWord.querySelector("letter.active");
-
-                const { key } = event;
-                if (key === " ") {
-                  event.preventDefault();
-                  const $nextWord = $currentWord.nextElementSibling;
-                  const $nextLetter = $nextWord?.querySelector("letter");
-
-                  $currentWord.classList.remove("active", "marked");
-                  $currentLetter.classList.remove("active");
-
-                  if ($nextWord) {
-                    $nextWord.classList.add("active");
-                    $nextLetter.classList.add("active");
-                  }
-
-                  $input.value = "";
-
-                  const hasMissedLetters =
-                    $currentWord.querySelectorAll("letter:not(.correct)")
-                      .length > 0;
-                  $currentWord.classList.add(
-                    hasMissedLetters ? "marked" : "correct"
-                  );
-
-                  if (!$nextWord) {
-                    clearInterval(intervalId); // Detener el temporizador si termina de escribir todas las palabras
-                    gameOver();
-                  }
-                  return;
-                }
-
-                if (key === "Backspace") {
-                  const $prevWord = $currentWord.previousElementSibling;
-                  const $prevLetter = $currentLetter.previousElementSibling;
-
-                  if (!$prevWord && !$prevLetter) {
-                    event.preventDefault();
-                    return;
-                  }
-
-                  const $wordMarked = $paragraph.querySelector("word.marked");
-                  if ($wordMarked && !$prevLetter) {
-                    event.preventDefault();
-                    $prevWord.classList.remove("marked");
-                    $prevWord.classList.add("active");
-
-                    const $letterToGo =
-                      $prevWord.querySelector("letter:last-child");
-
-                    $currentLetter.classList.remove("active");
-                    $letterToGo.classList.add("active");
-
-                    $input.value = [
-                      ...$prevWord.querySelectorAll(
-                        "letter.correct, letter.incorrect"
-                      ),
-                    ]
-                      .map(($el) => {
-                        return $el.classList.contains("correct")
-                          ? $el.innerText
-                          : "*";
-                      })
-                      .join("");
-                  }
-                }
-              }
-
-              function onKeyUp() {
-                const $currentWord = $paragraph.querySelector("word.active");
-                const $currentLetter =
-                  $currentWord.querySelector("letter.active");
-
-                const currentWord = $currentWord.innerText.trim();
-                $input.maxLength = currentWord.length;
-
-                const $allLetters = $currentWord.querySelectorAll("letter");
-
-                $allLetters.forEach(($letter) =>
-                  $letter.classList.remove("correct", "incorrect")
-                );
-
-                $input.value.split("").forEach((char, index) => {
-                  const $letter = $allLetters[index];
-                  const isCorrect = char === currentWord[index];
-                  $letter.classList.add(isCorrect ? "correct" : "incorrect");
-                });
-
-                $currentLetter.classList.remove("active", "is-last");
-                const inputLength = $input.value.length;
-                const $nextActiveLetter = $allLetters[inputLength];
-
-                if ($nextActiveLetter) {
-                  $nextActiveLetter.classList.add("active");
-                } else {
-                  $currentLetter.classList.add("active", "is-last");
-                  if (!$currentWord.nextElementSibling) {
-                    clearInterval(intervalId); // Detener el temporizador si el usuario termina de escribir
-                    gameOver();
-                  }
-                }
-              }
-
-              function gameOver() {
-                const correctWords =
-                  $paragraph.querySelectorAll("word.correct").length;
-                const correctLetter =
-                  $paragraph.querySelectorAll("letter.correct").length;
-                const incorrectLetter =
-                  $paragraph.querySelectorAll("letter.incorrect").length;
-
-                const totalLetters = correctLetter + incorrectLetter;
-                const accuracy =
-                  totalLetters > 0 ? (correctLetter / totalLetters) * 100 : 0;
-                const wpm = (correctWords * 60) / 30;
-
-                $wpm.textContent = wpm;
-                $accuracy.textContent = `${accuracy.toFixed(2)}%`;
-
-                $results.style.display = "block";
-              }
-            }
-          });
-        });
-      </script>
-
-      <section class="bg-light py-5">
-        <div class="container px-5">
-          <div class="row gx-5 justify-content-center">
-            <div class="col-xxl-8">
-              <div class="text-center my-5">
-                <h2 class="display-5 fw-bolder">
-                  <span class="text-gradient d-inline">
-                    Sobre este proyecto
-                  </span>
-                </h2>
-                <p class="lead fw-light mb-4">
-                  Proyecto inspirado en la página web monkeytype.com
-                </p>
-
-                <div class="d-flex justify-content-center fs-2 gap-4">
-                  <a class="text-gradient" href="#!"
-                    ><i class="bi bi-linkedin"></i
-                  ></a>
-                  <a class="text-gradient" href="#!"
-                    ><i class="bi bi-github"></i
-                  ></a>
-                </div>
-              </div>
-            </div>
-          </div>
-        </div>
-      </section>
+      <div id="test-area"></div>
     </main>
-
-    <footer class="bg-white py-4 mt-auto">
-      <div class="container px-5">
-        <div
-          class="row align-items-center justify-content-between flex-column flex-sm-row"
-        >
-          <div class="col-auto">
-            <div class="small m-0">
-              Copyright &copy; Crédito a los respectivos autores
-            </div>
-          </div>
-          <div class="col-auto">
-            <a class="small" href="#!">LinkedIn</a>
-            <span class="mx-1">&middot;</span>
-            <a class="small" href="#!">GitHub</a>
-            <span class="mx-1">&middot;</span>
-            <a class="small" href="#!">Portfolio</a>
-          </div>
-        </div>
+    <footer>
+      <div>Copyright &copy; Crédito a los respectivos autores</div>
+      <div>
+        <a href="#!">LinkedIn</a>
+        <span class="mx-1">&middot;</span>
+        <a href="#!">GitHub</a>
+        <span class="mx-1">&middot;</span>
+        <a href="#!">Portfolio</a>
       </div>
     </footer>
-
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js"></script>
-    <script src="{% static 'js/scripts.js' %}"></script>
   </body>
 </html>
